Faq Page Completed
Added the animation and other ui elements to the FAQ Page

--- a/accessDenied/Base.lproj/Main.storyboard
+++ b/accessDenied/Base.lproj/Main.storyboard
@@ -1,28 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="pID-gu-K7x">
     <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item-->
+        <!--FAQ-->
         <scene sceneID="Sqs-bR-d8a">
             <objects>
-                <viewController id="rqq-Xj-qqe" sceneMemberID="viewController">
+                <viewController id="rqq-Xj-qqe" customClass="FaqViewController" customModule="accessDenied" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Abs-mN-sjs">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="65-1" translatesAutoresizingMaskIntoConstraints="NO" id="rik-6L-4Of">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="687"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FAQ" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7ka-Tq-dZC">
+                                <rect key="frame" x="24" y="33" width="93" height="60"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="4H4-ZS-KTp"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="7ka-Tq-dZC" firstAttribute="leading" secondItem="4H4-ZS-KTp" secondAttribute="leading" constant="24" id="JK2-8Y-gwg"/>
+                            <constraint firstItem="7ka-Tq-dZC" firstAttribute="top" secondItem="4H4-ZS-KTp" secondAttribute="top" constant="33" id="ufu-lF-go7"/>
+                        </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="Mcn-48-EBo"/>
+                    <tabBarItem key="tabBarItem" title="FAQ" selectedImage="Icon awesome-lightbulb" id="Mcn-48-EBo"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FYL-yV-FP6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2752" y="86"/>
+            <point key="canvasLocation" x="-2752.1739130434785" y="85.59782608695653"/>
         </scene>
         <!--Item-->
         <scene sceneID="IDx-gw-kgF">
@@ -239,6 +256,7 @@
     <resources>
         <image name="65-1" width="8000" height="5000"/>
         <image name="Hackathon Logo" width="118" height="148"/>
+        <image name="Icon awesome-lightbulb" width="16" height="23"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
