--- a/accessDenied/TimelineCell.xib
+++ b/accessDenied/TimelineCell.xib
@@ -18,10 +18,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jQC-w4-8Kx">
-                        <rect key="frame" x="20" y="20" width="144" height="19.5"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="144" id="8Dw-5V-DOM"/>
-                        </constraints>
+                        <rect key="frame" x="20" y="20" width="531" height="19.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <color key="textColor" red="0.83529411764705885" green="0.1764705882352941" blue="0.52549019607843139" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
@@ -56,7 +53,7 @@
                             <constraint firstAttribute="height" constant="30" id="6CW-Yj-nEw"/>
                             <constraint firstAttribute="width" constant="30" id="nC3-0J-rdC"/>
                         </constraints>
-                        <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <state key="normal" image="doc.on.clipboard.fill" catalog="system">
                             <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </state>
@@ -70,6 +67,7 @@
                     <constraint firstItem="GXb-hm-6Ie" firstAttribute="leading" secondItem="y7Y-nm-YJ1" secondAttribute="trailing" constant="20" id="N5h-8A-L4E"/>
                     <constraint firstAttribute="trailing" secondItem="bhl-CE-YEQ" secondAttribute="trailing" constant="20" id="Oe1-cN-uld"/>
                     <constraint firstAttribute="trailing" secondItem="fYL-cY-Ecy" secondAttribute="trailing" constant="20" id="SJQ-eE-ioD"/>
+                    <constraint firstAttribute="trailing" secondItem="jQC-w4-8Kx" secondAttribute="trailing" constant="20" id="SKQ-01-0YU"/>
                     <constraint firstAttribute="bottom" secondItem="GXb-hm-6Ie" secondAttribute="bottom" constant="12" id="e58-8G-EEg"/>
                     <constraint firstItem="jQC-w4-8Kx" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="eUF-17-pJC"/>
                     <constraint firstAttribute="bottom" secondItem="bhl-CE-YEQ" secondAttribute="bottom" constant="12" id="lIf-jf-oBX"/>
