--- a/accessDenied/Base.lproj/Main.storyboard
+++ b/accessDenied/Base.lproj/Main.storyboard
@@ -31,47 +31,71 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="u3C-O9-t4c">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="insetGrouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="u3C-O9-t4c">
                                 <rect key="frame" x="20" y="100" width="374" height="567"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="title" rowHeight="105" id="Yxf-ke-QAK" customClass="FaqTableViewCell" customModule="accessDenied" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="374" height="105"/>
+                                        <rect key="frame" x="20" y="55.333332061767578" width="334" height="105"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Yxf-ke-QAK" id="AU1-DA-yBc">
-                                            <rect key="frame" x="0.0" y="0.0" width="374" height="105"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="334" height="105"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="jsj-IB-p0n">
-                                                    <rect key="frame" x="20" y="11" width="330" height="70"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="jsj-IB-p0n">
+                                                    <rect key="frame" x="20" y="9" width="275" height="83"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="275" id="MS4-7S-r6C"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="25"/>
                                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="luz-aO-wjQ">
+                                                    <rect key="frame" x="311.33333333333331" y="35" width="12.666666666666686" height="35"/>
+                                                    <color key="tintColor" red="0.83529411764705885" green="0.1764705882352941" blue="0.52549019607843139" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <state key="normal" image="chevron.right" catalog="system"/>
+                                                    <connections>
+                                                        <action selector="buttontapped:" destination="Yxf-ke-QAK" eventType="touchUpInside" id="0NK-Zt-ud1"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="luz-aO-wjQ" secondAttribute="trailing" constant="10" id="0Hv-De-Oea"/>
+                                                <constraint firstItem="jsj-IB-p0n" firstAttribute="leading" secondItem="AU1-DA-yBc" secondAttribute="leading" constant="20" symbolic="YES" id="21C-bO-k9B"/>
+                                                <constraint firstItem="jsj-IB-p0n" firstAttribute="top" secondItem="AU1-DA-yBc" secondAttribute="top" constant="9" id="Jaq-cd-rFB"/>
+                                                <constraint firstAttribute="bottom" secondItem="jsj-IB-p0n" secondAttribute="bottom" constant="13" id="aBa-lI-51J"/>
+                                                <constraint firstAttribute="bottom" secondItem="luz-aO-wjQ" secondAttribute="bottom" constant="35" id="ifs-Gf-DHe"/>
+                                                <constraint firstItem="luz-aO-wjQ" firstAttribute="top" secondItem="AU1-DA-yBc" secondAttribute="top" constant="35" id="iqp-Ec-fHi"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
+                                            <outlet property="buttontapped" destination="luz-aO-wjQ" id="jyI-tU-aSV"/>
                                             <outlet property="question" destination="jsj-IB-p0n" id="y1F-e2-GYW"/>
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="cell" rowHeight="93" id="njd-rf-uLD" customClass="FaqAnswerTableViewCell" customModule="accessDenied" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="133" width="374" height="93"/>
+                                        <rect key="frame" x="20" y="160.33333206176758" width="334" height="93"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="njd-rf-uLD" id="jdi-cU-OLk">
-                                            <rect key="frame" x="0.0" y="0.0" width="374" height="93"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="334" height="93"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Aqe-eS-irZ">
-                                                    <rect key="frame" x="20" y="11" width="319" height="60"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Aqe-eS-irZ">
+                                                    <rect key="frame" x="20" y="11" width="285" height="82"/>
                                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Aqe-eS-irZ" firstAttribute="top" secondItem="jdi-cU-OLk" secondAttribute="top" constant="11" id="JeL-cp-f4g"/>
+                                                <constraint firstItem="Aqe-eS-irZ" firstAttribute="leading" secondItem="jdi-cU-OLk" secondAttribute="leading" constant="20" symbolic="YES" id="TxX-3k-ef4"/>
+                                                <constraint firstAttribute="bottom" secondItem="Aqe-eS-irZ" secondAttribute="bottom" id="YpT-ne-HQ9"/>
+                                                <constraint firstAttribute="trailing" secondItem="Aqe-eS-irZ" secondAttribute="trailing" constant="29" id="Yzh-Bm-aqf"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
@@ -104,7 +128,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FYL-yV-FP6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2752.8000000000002" y="85.007496251874073"/>
+            <point key="canvasLocation" x="-2753.6231884057975" y="84.782608695652186"/>
         </scene>
         <!--Info-->
         <scene sceneID="IDx-gw-kgF">
@@ -299,6 +323,17 @@
                                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o9o-W3-9Ku">
+                                                    <rect key="frame" x="334" y="36" width="20" height="35"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <color key="tintColor" red="0.83529411764705885" green="0.1764705882352941" blue="0.52549019607843139" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <state key="normal" image="chevron.right" catalog="system">
+                                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    </state>
+                                                    <connections>
+                                                        <action selector="buttonTapped:" destination="ZNx-4p-ung" eventType="touchUpInside" id="muI-JN-2gw"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
@@ -315,6 +350,7 @@
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
+                                            <outlet property="buttonTapped" destination="o9o-W3-9Ku" id="SLg-ml-S6D"/>
                                             <outlet property="designationLabel" destination="god-kM-YLv" id="30X-gH-F0a"/>
                                             <outlet property="nameLabel" destination="VG6-Up-pcu" id="6Ij-nk-uXG"/>
                                             <outlet property="speakerImage" destination="VaI-Kj-bZu" id="SZF-h3-lka"/>
@@ -463,7 +499,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vIe-1i-kwp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1044" y="85.007496251874073"/>
+            <point key="canvasLocation" x="-1046.376811594203" y="84.782608695652186"/>
         </scene>
         <!--Timeline-->
         <scene sceneID="ubG-pz-pl7">
